# HC-Slack-Migration

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
hc_slack_migration/: __init__.py  main.py
