[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-slack-migration"
version = "0.1.0"
description = "Monitor Hack Club Slack migration progress"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "ketr4x", email = "mail@ketrax.ovh"}
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "sqlalchemy",
    "setuptools",
]

[project.scripts]
hc-slack-migration = "hc_slack_migration.main:main"
